# Aether

./: .coverage-baseline.json  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile  pyproject.toml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
crates/aether-aggregator/: Cargo.toml
crates/aether-aggregator/src/: lib.rs  main.rs  registry.rs  scheduler.rs  tie_breaker.rs
crates/aether-aggregator/src/network/: hpe_vc.rs  mod.rs
crates/aether-aggregator/src/storage/: csi.rs  mod.rs
crates/aether-aggregator/tests/: auction_convergence_timing.rs  csi_zvol_mount_lifecycle.rs  deterministic_scheduling_selection.rs  heartbeat_timeout_tests.rs  switch_vlan_tagging_integration.rs
crates/aether-auth/: Cargo.toml  build.rs
crates/aether-auth/src/: lib.rs  mtls.rs  token.rs
crates/aether-auth/tests/: mtls_integration_tests.rs
crates/aether-fence/: Cargo.toml
crates/aether-fence/src/: main.rs
crates/aetherd/: Cargo.toml
crates/aetherd/src/: bidder.rs  cloud_init.rs  lib.rs  main.rs  telemetry.rs  vsock.rs
crates/aetherd/src/hypervisor/: firecracker.rs  mod.rs  qemu.rs
crates/aetherd/src/migration/: block.rs  converge.rs  memory.rs  mod.rs  socket.rs
crates/aetherd/src/network/: bridge.rs  mod.rs
crates/aetherd/src/storage/: iscsi.rs  mod.rs  zfs.rs
crates/aetherd/tests/: bidding_resource_thresholds.rs  cloud_init_iso_guest_boot.rs  firecracker_vm_boot_lifecycle.rs  host_system_metrics_query.rs  migration_tests.rs  node_tests.rs  qemu_kvm_vm_lifecycle.rs  vlan_isolation_verification.rs  vsock_stream_performance.rs  zfs_thin_provisioning_limits.rs
crates/pact-mock-server/: Cargo.toml
crates/pact-mock-server/src/: hpe_oneview.rs  lib.rs
docs/EPICS/: audit_dev_1to5.md  epic_template.md  story_template.md
docs/EPICS/epic_01_core_substrate/: epic_01_core_substrate.md  story_01_1_workspace_setup.md  story_01_2_proto_schema.md  story_01_3_mtls_handshake.md  story_01_4_attestation.md
docs/EPICS/epic_02_reverse_bidding/: epic_02_reverse_bidding.md  story_02_1_node_registry.md  story_02_2_bid_broadcast.md  story_02_3_telemetry_collector.md  story_02_4_bidding_algorithm.md  story_02_5_tie_breaker_resolver.md
docs/EPICS/epic_03_dual_hypervisor/: epic_03_dual_hypervisor.md  story_03_1_firecracker_process.md  story_03_2_firecracker_vsock.md  story_03_3_qemu_kvm.md  story_03_4_cloud_init_iso.md
docs/EPICS/epic_04_storage_net_tagging/: epic_04_storage_net_tagging.md  story_04_1_zfs_zvol.md  story_04_2_linux_bridge.md  story_04_3_democratic_csi.md  story_04_4_virtual_connect.md
docs/EPICS/epic_05_live_migration/: epic_05_live_migration.md  story_05_1_migration_socket.md  story_05_2_block_replication.md  story_05_3_memory_transfer.md  story_05_4_auto_converge.md
docs/EPICS/epic_06_oob_fencing_ha/: epic_06_oob_fencing_ha.md  story_06_1_redfish_ilo.md  story_06_2_deadman_switch.md  story_06_3_stonith_workflow.md  story_06_4_zfs_replication.md  story_06_5_k8s_recovery_discovery.md
docs/EPICS/epic_07_dev_cli_guest_ops/: epic_07_dev_cli_guest_ops.md  story_07_1_cli_parser.md  story_07_2_guest_tunnels.md  story_07_3_virtiofs_mounts.md  story_07_4_image_ops.md
docs/EPICS/epic_08_multi_vendor_hal/: epic_08_multi_vendor_hal.md  story_08_1_dell_idrac.md  story_08_2_dell_smartfabric.md  story_08_3_generic_redfish.md  story_08_4_lenovo_flex.md
docs/EPICS/epic_09_capi_integration/: epic_09_capi_integration.md  story_09_1_cloud_init_injection.md  story_09_2_firecracker_mmds.md  story_09_3_ip_discovery.md  story_09_4_failure_domains.md
docs/architecture/: capi_compatibility.md  distributed_proposals.md  flintlock_contracts.md  impl_bidding_scheduling.md  impl_ha_recovery.md  impl_hypervisor_lifecycle.md  impl_network_identity.md  impl_security_protocol.md  impl_storage_migration.md  impl_storage_node.md  live_migration.md  multipass_cli.md  production_readiness.md  proxmox_features.md
docs/background/: discussion_01.md  discussion_02.md  discussion_03.md  discussion_04.md  discussion_05.md  discussion_06.md  discussion_07.md  discussion_08.md  discussion_09.md  discussion_10.md  discussion_11.md  discussion_12.md  discussion_13.md  discussion_14.md  discussion_15.md  discussion_16.md  discussion_17.md  discussion_18.md  discussion_19.md  discussion_20.md  discussion_21.md  discussion_22.md
hack/: cargo-clippy.sh  cargo-coverage.sh  cargo-fmt-check.sh  cargo-nextest.sh  cobertura-to-md.py
proto/: aether.proto
scripts/: dummy.py
