[package]
name = "aether-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
rcgen = "0.14"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
log = "0.4"

[build-dependencies]
tonic-prost-build = "0.14"
