[package]
name = "aetherd"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
aether-auth = { path = "../aether-auth" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
