[package]
name = "aetherd"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.14", features = ["tls-ring"] }
prost = "0.14"
tokio = { version = "1", features = ["full"] }
aether-auth = { path = "../aether-auth" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2.1"
rustls-pki-types = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.8"
