[package]
name = "aetherd"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.14", features = ["tls-ring"] }
prost = "0.14"
tokio = { version = "1", features = ["full"] }
aether-auth = { path = "../aether-auth" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2.1"
rustls-pki-types = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tempfile = "3.8"
futures = "0.3"
nix = { version = "0.29", features = ["fs", "process", "signal"] }


[target.'cfg(target_os = "linux")'.dependencies]
zfs-core = "0.5.0"
nvpair = "0.5.0"
nvpair-sys = "0.4.0"
rtnetlink = "0.14"
tun-rs = "2.8.5"
rustables = "0.8.8"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
