[package]
name = "pact-mock-server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }


